# creador-imagenes-de-marca

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BRIEF-AGENCIA.md  CLAUDE.md  Dockerfile  INSTRUCCIONES-EIKON.md  INSTRUCCIONES-GENERADOR-V2.md  LOGO_ASSET_DEPLOYMENT.md  Makefile  README.md  _STATUS.md  audit_render.py  contra_covers.json  contrast_validator.py  eikon.py  gallery.py  generar  generar_agencia.py  generar_imagenes.py  generar_imagenes_flux.py  generar_imagenes_flux_dev.py  generar_imagenes_playground.py  generate_targets.py  layouts.json  prompts.json  publication_cards.json  pyproject.toml  render.py  render_publication_cards.py  requirements-dev.txt  requirements.txt  sync_publication_assets.py  taxonomy.json  variations.py  web_icons.py
.playwright-cli/: page-2026-04-20T07-30-15-811Z.yml
.playwright-mcp/: page-2026-04-20T08-15-14-357Z.yml  page-2026-06-30T13-27-02-978Z.yml  page-2026-06-30T13-28-29-923Z.yml  page-2026-06-30T13-29-21-029Z.yml  page-2026-06-30T13-29-46-027Z.yml  page-2026-06-30T13-30-14-195Z.yml  page-2026-06-30T13-30-43-228Z.yml  page-2026-06-30T13-31-44-238Z.yml  page-2026-06-30T13-38-21-426Z.yml  page-2026-06-30T13-38-36-610Z.yml  page-2026-06-30T13-38-48-358Z.yml  page-2026-06-30T13-38-55-795Z.yml  page-2026-06-30T13-39-13-574Z.yml  page-2026-06-30T13-39-16-907Z.yml  page-2026-06-30T13-39-23-375Z.yml  page-2026-06-30T13-39-40-156Z.yml  page-2026-06-30T13-39-44-974Z.yml  page-2026-06-30T13-39-48-511Z.yml  page-2026-06-30T13-40-06-436Z.yml  page-2026-06-30T13-40-21-871Z.yml  page-2026-06-30T13-40-50-840Z.yml  page-2026-06-30T13-41-51-649Z.yml  page-2026-06-30T13-42-22-711Z.yml  page-2026-06-30T13-42-57-024Z.yml  page-2026-06-30T13-44-33-823Z.yml  page-2026-06-30T13-45-15-127Z.yml  page-2026-06-30T13-45-41-283Z.yml  page-2026-06-30T13-45-42-512Z.yml  page-2026-06-30T13-46-14-957Z.yml  page-2026-06-30T13-46-38-381Z.yml  page-2026-06-30T13-47-53-905Z.yml  page-2026-06-30T13-48-14-402Z.yml  page-2026-06-30T13-48-25-436Z.yml  page-2026-06-30T13-49-01-983Z.yml  page-2026-06-30T13-49-24-499Z.yml  page-2026-06-30T13-50-06-790Z.yml  page-2026-06-30T13-50-17-747Z.yml  page-2026-06-30T13-50-36-397Z.yml  page-2026-06-30T13-50-54-544Z.yml  page-2026-06-30T13-50-58-550Z.yml  (+25 more)
_legacy/: cleanup_legacy.py  generar_agencia.py  generar_agencia_v2.py  generate_templates.py  re_pilot.py  render.py  render_hires.py  render_ui_kit.py  sync_publication_assets.py
audit/: METHODOLOGY.md  README.md  TEMPLATE-phase.md
config/: axes.json  taxonomy.json  typography.json
deploy/: cloud-run.sh
docs/: 2026-06-30-client-render-migration.md  2026-07-02-estrategia-calidad.md  CHANGELOG.md  DEPLOY.md  ESTADO-ENTREGA-2026-06-20.md  MASTER-TAXONOMIA.md  OUTPUT-NO-VERSIONADOS.md  QA-CHECKLIST.md  QA-GATES.md
e2e/: README.md  conftest.py  test_full_flow.py
eikon_core/: __init__.py  brand.py  cache.py  cli.py  constants.py  errors.py  injection.py  isotype.py  layout.py  manifest.py  mapping.py  orchestrator.py  paths.py  playwright_lazy.py  render.py  svg_generator.py  taxonomy.py  templates.py  text.py  types.py  validation.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
marcas/: agora-autologic.json  agora-elenxos.json  agora-st.json  agora.json  pinakotheke-agon.json  pinakotheke.json  (+50 more)
(+230 files in other folders)
