[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eikon"
version = "0.1.0"
description = "Eikon — motor CSS/HTML → PNG para assets de marca"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
  "playwright>=1.40",
  "Pillow>=10.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]
webapp = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "httpx>=0.26",
]

[project.scripts]
eikon = "eikon:main"

[tool.setuptools]
py-modules = ["eikon", "contrast_validator", "gallery", "web_icons", "variations"]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C90", "SIM", "RUF", "PERF", "PIE", "TID"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "B011", "RUF001", "RUF003"]  # '×' (combinatoria N×M) intencional en tests
"scripts/*" = []
"webapp/app.py" = ["B008", "C901"]
"webapp/api/*" = ["B008"]  # FastAPI usa Depends(...) en defaults de parámetros
"webapp/tests/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["eikon_core.*", "webapp.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["jinja2"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["eikon_core", "webapp", "variations", "contrast_validator"]
branch = true
omit = ["*/tests/*", "*/.venv/*"]

[tool.coverage.report]
show_missing = true
fail_under = 46
# ratchet target: 80

[tool.pytest.ini_options]
testpaths = ["tests", "webapp/tests"]
addopts = "-ra -q --strict-markers --strict-config"
markers = [
  "slow: checks que pueden tardar o invocar suites completas",
  "integration: requieren assets reales en output/ o integración con el filesystem",
]
